--- a/gcc-plugin/makefile
+++ b/gcc-plugin/makefile
@@ -7,6 +7,8 @@ TARGET_GCC = gcc
 # The name of the file we want to compile 
 PLUGIN_SOURCE_FILES = main.cpp
 
+LIBRARY_SOURCE_FILES = libuPrint.c
+
 # Plugins directory of GCC
 GCC_PLUGINS_DIR = $(shell $(TARGET_GCC) -print-file-name=plugin)
 
@@ -16,7 +18,7 @@ CXXFLAGS+= -I$(GCC_PLUGINS_DIR)/include -fPIC -fno-rtti
 # our recipes
 .PHONY: all clean test
 
-all: bin/uPrint.so
+all: bin/uPrint.so bin/libuPrint.o
 
 bin/uPrint.so: $(PLUGIN_SOURCE_FILES)
 	$(HOST_GCC) -shared $(CXXFLAGS) $^ -o $@
@@ -24,10 +26,14 @@ bin/uPrint.so: $(PLUGIN_SOURCE_FILES)
 install: bin/uPrint.so
 	sudo cp $(shell pwd)/$^ $(GCC_PLUGINS_DIR)/uPrint.so
 
+bin/libuPrint.o: $(LIBRARY_SOURCE_FILES)
+	gcc -c -Wall -Werror -fpic $^ -o bin/libuPrint.o
+	ar rcs bin/libuPrint.a bin/libuPrint.o
+	rm bin/libuPrint.o
+
 test:
-	gcc test.c -fplugin=uPrint -o bin
-	- ./bin
-	@rm bin
+	gcc test.c -Lbin -fplugin=uPrint -luPrint -o bin/test
+	- ./bin/test
 
 clean: 
 	rm -f bin/*
